fix sidebar pushing toggle button off screen

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -8,5 +8,12 @@ body {
 #root {
   display: flex;
   flex-direction: row;
-  min-height: 100vh; ;
+
+  @media(max-width: 1024px){
+    position: relative;
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
+    max-height: 100%;
+  }
 }
