--- a/src/frontend/src/components/Page.css
+++ b/src/frontend/src/components/Page.css
@@ -7,12 +7,13 @@
 }
 
 .navbar-ShowHide{
-  margin:0;
-
+  margin: 0;
   position: fixed;
-  bottom:1rem;
-  right:1rem;
-}
-@media(min-width: 1024px){
-.navbar-ShowHide{ display:none;}
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 1010;
+
+  @media(min-width: 1024px) {
+    display:none;
+  }
 }
